--- a/may1522/public/index.html
+++ b/may1522/public/index.html
@@ -29,6 +29,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
     /> 
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
     <title>React App</title>
   </head>
   <body>
